[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[sub_resource type="Theme" id=2]

[sub_resource type="CubeMesh" id=1]

[node name="Spatial" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.408244, 0.577353, 0, 0.816501, 0.577345, -0.707107, -0.408244, 0.577353, 5, 5, 5 )

[node name="Control" type="Control" parent="Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Camera/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -298.0
margin_right = 512.0
margin_bottom = 300.0
theme = SubResource( 2 )

[node name="WindowDialog" type="WindowDialog" parent="Camera/Control/Panel"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -274.0
margin_top = -138.0
margin_right = 274.0
margin_bottom = 138.0

[node name="Button1" type="Button" parent="Camera/Control/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -274.0
margin_top = -143.0
margin_right = -174.0
margin_bottom = -43.0
action_mode = 0

[node name="Button2" type="Button" parent="Camera/Control/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -143.0
margin_right = 50.0
margin_bottom = -43.0
action_mode = 0

[node name="Button3" type="Button" parent="Camera/Control/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 175.0
margin_top = -143.0
margin_right = 275.0
margin_bottom = -43.0
action_mode = 0

[node name="CSGMesh" type="CSGMesh" parent="."]
mesh = SubResource( 1 )

[connection signal="popup_hide" from="Camera/Control/Panel/WindowDialog" to="Camera/Control" method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="Camera/Control/Panel/Button1" to="Camera/Control" method="_on_Button1_pressed"]
[connection signal="pressed" from="Camera/Control/Panel/Button2" to="Camera/Control" method="_on_Button2_pressed"]
[connection signal="pressed" from="Camera/Control/Panel/Button3" to="Camera/Control" method="_on_Button3_pressed"]
